--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
         <div id="contact">
             <a href="ltabacco@terpmail.umd.edu"target="_blank">Send email</a>
             <br /><br />
-             <a href="https://profile.indeed.com/p/luket-o2y4qsu"target="_blank">Indeed Profile</a>
+             <a href="https://profile.indeed.com/p/luket-o2y4qsu"target="_blank">Fine Me On Indeed</a>
         </div>
         
         
