--- a/styled-text.html
+++ b/styled-text.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <title>Stytled Text</title>
-</head>
-    
-<body>
-    <h1>
-        Title
-    </h1>
-    <p>Paragraph</p>
-</body>
-    
+    <head>
+        <title>Stytled Text</title>
+    </head>
+
+    <body>
+        <h1>Title</h1>
+        <p>Paragraph</p>
+    </body>
 </html>
