--- a/styled-text.html
+++ b/styled-text.html
@@ -5,7 +5,9 @@
     </head>
 
     <body>
-        <h1>Title</h1>
+        <h1 style="background-color: black; color: white; font-family: Arial; font-size: 30px; text-align: center">
+            Title
+        </h1>
         <p>Paragraph</p>
     </body>
 </html>
