--- a/styled-text.html
+++ b/styled-text.html
@@ -2,6 +2,17 @@
 <html lang="en">
     <head>
         <title>Stytled Text</title>
+        <style>
+            h1 {
+                background-color: black;
+                color: white;
+                font-family: Arial;
+                font-size: 30px;
+                text-align: center;
+            }
+        
+        
+        </style>
     </head>
 
     <body>
