--- a/online-portfolio/Index.html
+++ b/online-portfolio/Index.html
@@ -25,35 +25,37 @@
         <div class="containter-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <h1>Luke Tabacco</h1>
-                    <h2>Sports Journalist</h2>
+                    <h1>Welcome to my Media Portfolio</h1>
+                    <h2 id="name">Luke Tabacco / Sports Journalist</h2>
                 </div>
 
                 <div class="col-sm-6">
-                    <img src="IMG_6972%202.jpg" alt="A photo of Luke Tabacco" width="300" />
+                    <img src="IMG_6972%202.jpg" alt="A photo of Luke Tabacco" width="400" />
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row" id="button">
                 <div class="col">
-                    <button>Work With Me Today</button>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-4">
-                    <h3>Experience</h3>
-                </div>
-                <div class="col-4">
-                    <h3>Skills</h3>
-                </div>
-                <div class="col-4">
-                    <h3>Education</h3>
+                    <a href="mailto:ltabacco@terpmail.umd.edu" target="_blank"><button>Work With Me Today</button></a>
                 </div>
             </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid" id="navigation">
+            <div class="row">
+                <div class="col-4">
+                    <a href="#experience"><h3>Experience</h3></a>
+                </div>
+                <div class="col-4">
+                    <a href="#skills"><h3>Skills</h3></a>
+                </div>
+                <div class="col-4">
+                    <a href="#education"><h3>Education</h3></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid" id="experience">
             <div class="row">
                 <div class="col">
                     <h2>Experience</h2>
@@ -61,43 +63,167 @@
             </div>
             <div class="row">
                 <div class="col-3">
-                    <h5>Job Title</h5>
+                    <h4>Job Title</h4>
+                    <p>Beat Writer - WMUC Sports</p>
                 </div>
                 <div class="col-3">
-                    <h5>Location</h5>
+                    <h4>Location</h4>
+                    <p>College Park, Maryland</p>
                 </div>
                 <div class="col-3">
-                    <h5>Dates</h5>
+                    <h4>Dates</h4>
+                    <p>February, 2025 - Present</p>
                 </div>
                 <div class="col-3">
-                    <h5>Description</h5>
+                    <h4>Description</h4>
+                    <p>
+                        I worked as the University of Maryland Men’s Lacrosse beat writer for WMUC Sports! This was one
+                        of the greatest experiences in my life as I got to cover every home game in person from the
+                        press box, as well as having the opportunity to appear and interview in all the post game press
+                        conferences.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <h4>Job Title</h4>
+                    <p>Sports Gamer Reporter and Editor - Terrapin Sports Central</p>
+                </div>
+                <div class="col-3">
+                    <h4>Location</h4>
+                    <p>College Park, Maryland</p>
+                </div>
+                <div class="col-3">
+                    <h4>Dates</h4>
+                    <p>August, 2023 - Present</p>
+                </div>
+                <div class="col-3">
+                    <h4>Description</h4>
+                    <p>
+                        I started working for studio production for the weekly shows when I first started as a freshman!
+                        I’ve now grown to being able to report and edit gamers for various University of Maryland sports
+                        including men and women’s lacrosse, volleyball, baseball, as well as men’s soccer this upcoming
+                        season.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-3">
+                    <h4>Job Title</h4>
+                    <p>Retail Store Sales Associate - Goat USA</p>
+                </div>
+                <div class="col-3">
+                    <h4>Location</h4>
+                    <p>Danbury, CT</p>
+                </div>
+                <div class="col-3">
+                    <h4>Dates</h4>
+                    <p>June, 2025 - Present</p>
+                </div>
+                <div class="col-3">
+                    <h4>Description</h4>
+                    <p>
+                        I worked at Goat USA while I was home for the summer! I started when the store was completely
+                        empty and helped build it into what it became today! After working there all summer and
+                        performing well, when I go back after the semester I am getting a promotion from a retail
+                        associate to a sales lead!
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-3">
+                    <h4>Job Title</h4>
+                    <p>Crew Member - Jersey Mike's Subs</p>
+                </div>
+                <div class="col-3">
+                    <h4>Location</h4>
+                    <p>Brookfield, CT</p>
+                </div>
+                <div class="col-3">
+                    <h4>Dates</h4>
+                    <p>April, 2021 - February, 2023</p>
+                </div>
+                <div class="col-3">
+                    <h4>Description</h4>
+                    <p>
+                        This was my first job! I started working here when I was 16 years old. I learned how to manage
+                        inventory, work as a team and how to handle large crowds with exceptional customer service.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-3">
+                    <h4>Job Title</h4>
+                    <p>Car Detailer and Washer - Honda of Danbury</p>
+                </div>
+                <div class="col-3">
+                    <h4>Location</h4>
+                    <p>Danbury, CT</p>
+                </div>
+                <div class="col-3">
+                    <h4>Dates</h4>
+                    <p>February, 2023 - May, 2025</p>
+                </div>
+                <div class="col-3">
+                    <h4>Description</h4>
+                    <p>
+                        I started working here when I turned 18. A job I could manage while I was home for summer breaks
+                        as a college student. I learned how to work quickly and efficiently, as well as continuing my
+                        strength to work well as a team.
+                    </p>
                 </div>
             </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid" id="skills">
             <div class="row">
                 <div class="col">
                     <h2>Skills</h2>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <ul>
+                        <li>Computer Skills</li>
+                        <li>Sports Gamer Reporting and Editing</li>
+                        <li>3.6 College Undergraduate GPA</li>
+                        <li>Cleaning</li>
+                        <li>Journalism Communications (Interviewing)</li>
+                        <li>Hard Working</li>
+                    </ul>
+                </div>
+                <div class="col-sm-6">
+                    <ul>
+                        <li>Beat Writing</li>
+                        <li>Enthusiasm</li>
+                        <li>Managing Inventory</li>
+                        <li>Opening and Closing a Store</li>
+                        <li>Counting Money</li>
+                        <li>Cash Register</li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid" id="education">
             <div class="row">
                 <div class="col">
                     <h2>Education</h2>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <h5>Degree</h5>
-                </div>
-                <div class="col-4">
-                    <h5>School</h5>
-                </div>
-                <div class="col-4">
-                    <h5>Year</h5>
+                <div class="row">
+                    <div class="col-6">
+                        <p>Undergraduate Student, Journalism</p>
+                        <p>University of Maryland</p>
+                        <p>2023 - Present</p>
+                    </div>
+                    <div class="col-6">
+                        <p>High School Diploma</p>
+                        <p>Brookfield High School (Brookfield, CT)</p>
+                        <p>2019-2023</p>
+                    </div>
                 </div>
             </div>
         </div>
