--- a/data-viz-project/Index.html
+++ b/data-viz-project/Index.html
@@ -31,6 +31,7 @@
 
             <p>This dives into how much each NFL team puts into their players, how they decide to spend in terms of offense and defense, and whether or not it leads to more wins. The first scatter plot looks at the correlation between how much an NFL team spends on players, and the amount of wins they have logged so far this NFL season to see if there is any correlation or relationship between the two. The next bar chart digs deeper into the spending itself, seeing how each NFL team decides to spend in terms of whether or not to focus on offense, or defense. 
 </p>
+            <p>Source for all the data: https://www.spotrac.com/nfl/position/_/year/2025</p>
 
             <div class="flourish-embed flourish-scatter" data-src="visualisation/26423466">
                 <script src="https://public.flourish.studio/resources/embed.js"></script>
