--- a/data-viz-project/Index.html
+++ b/data-viz-project/Index.html
@@ -33,15 +33,7 @@
 </p>
             <p>Source for all the data: https://www.spotrac.com/nfl/position/_/year/2025</p>
 
-            <div class="flourish-embed flourish-scatter" data-src="visualisation/26423466">
-                <script src="https://public.flourish.studio/resources/embed.js"></script>
-                <noscript
-                    ><img
-                        src="https://public.flourish.studio/visualisation/26423466/thumbnail"
-                        width="100%"
-                        alt="scatter visualization"
-                /></noscript>
-            </div>
+           <div class="flourish-embed flourish-scatter" data-src="visualisation/26423466"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/26423466/thumbnail" width="100%" alt="scatter visualization" /></noscript></div>
 
             <div class="flourish-embed flourish-chart" data-src="visualisation/26424483">
                 <script src="https://public.flourish.studio/resources/embed.js"></script>
