--- a/final-project/index.html
+++ b/final-project/index.html
@@ -1,8 +1,112 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <title>Title</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <title>Luke Tabacco Final Project</title>
+
+        <link href="style.css" rel="stylesheet" />
     </head>
-    <body></body>
+
+    <body>
+        <div class="cover-image">
+            <img src="jackie-robinson-patch.jpg" />
+            <div class="cover-text">
+                <h4>The Fight over Jackie Robinson</h4>
+                <p>By Jerry Brewer</p>
+            </div>
+            <div id="opening-text">
+                <h4>
+                    The trailblazer’s story symbolizes the pain and resilience of America. Can the reality outlast the
+                    myth?
+                </h4>
+            </div>
+            <p>
+                Rachel Robinson couldn’t give her blessing at first. She told the sculptor: “I’m sorry. I’m not seeing
+                him.” At that point, it had been nearly 50 years since her husband, Jackie Robinson, died and more than
+                70 since he broke baseball’s color barrier. But an eternal love can see through time. The statue wasn’t
+                right.
+            </p>
+            <p>Rachel relayed an idea through her daughter, Sharon.</p>
+            <p>“I’d like to see more of a smile,” she requested.</p>
+            <p>
+                In the sculptor’s revised work, Jackie flashed a warm smile. He looked relaxed. Posing with a bat over
+                his right shoulder and his left hand on his hip, he looked stately but accessible. Robinson, a seminal
+                figure whose grace and tenacity expedited the racial integration of a shambling nation, stood with
+                purpose.
+            </p>
+            <p>“That’s my Jack,” his widow said.</p>
+            <p>
+                In 2021, the statue was unveiled in Wichita, in front of the home complex of local youth baseball
+                association League 42. In no time, it became a local treasure.
+            </p>
+            <p>
+                Three years later, on a wet and gray January day, the city awoke to a disturbing sight. The statue had
+                vanished overnight, severed at the ankles, leaving only two bronze cleats atop home plate.
+            </p>
+            <div id="first-large-image">
+                <img src="jackie-bench.jpg" />
+            </div>
+            <div id="hand-brush">
+                <img src="Screenshot%202025-12-11%20at%209.20.46%20AM.png" width="400" />
+            </div>
+            <p>
+                Jack Roosevelt Robinson didn’t believe in his own myth. Too many sports legends are perfectly crafted to
+                make athletics seem like utopia. They’re not, but the caretaking of this fantasy enables a kind of
+                indifference that poisons the pursuit of greater progress. Nostalgia further complicates matters,
+                leading some to trust that the bad stuff was handled long ago and any current problems are exaggerated
+                because society has advanced. But better can be better.
+            </p>
+            <p>
+                Somehow, that notion is divisive now. A zero-sum mentality creates controversy out of inclusion,
+                corrupting the memory of Robinson and every other sporting pioneer who changed the world.
+            </p>
+            <p>
+                The progress we’ve made is neither adequate nor permanent. Robinson had an acute understanding of the
+                struggle. He was the son of sharecroppers, born on the James Madison Sasser plantation near Cairo, Ga.
+                His grandparents were enslaved. Yet 28 years into his life, he ended six decades of racial segregation
+                in baseball on April 15, 1947.
+            </p>
+
+            <div id="jackie-desk">
+                <img src="jackie-desk.png" width="600" />
+            </div>
+            <div id="statistical-infographic">
+                <h2>Need to Create Inforgraphic to go here</h2>
+            </div>
+            <p>
+                Today, we sanitize the moment and reference it mostly as compelling evidence of diminishing racism. It
+                is seen as a conclusion. To Robinson, it was merely one inning in the longest game ever.
+            </p>
+            <p>
+                “Baseball wasn’t the end goal of Jackie Robinson’s work,” said David Robinson, the youngest of his three
+                children. “It wasn’t what he was trying to achieve. That’s a misunderstanding, and sometimes that’s
+                projected too much. Baseball was part of his struggle to create opportunity for America.
+            </p>
+            <p>
+                “When he got his opportunity, there was no complacency. He showed what we could do, showed America what
+                it could be. He did not want success to blind us because he knew that, literally, our survival is not
+                guaranteed.”
+            </p>
+            <p>
+                How we remember Robinson says much about how we view America. It symbolizes our cruelty and our glory,
+                our pain and our resilience. It’s the most important tale in our sports history, a breakthrough of
+                incalculable moral, cultural and financial proportions.
+            </p>
+            <p>
+                Over the years, we have taken good care of the Robinson dream and ignored much of the reality. With his
+                transformative vision, Brooklyn Dodgers General Manager Branch Rickey chose Robinson as a “noble
+                experiment” to integrate baseball because he recognized his combination of talent and temperament.
+                Robinson could overcome the racist taunts and vicious acts. He had learned to suppress his emotions.
+            </p>
+            <p>
+                But he was not some docile Black athlete grateful just to be tolerated. He was strong. On the field, he
+                kept his cool. Off the field, he became a face and a voice of radical change. The Rev. Martin Luther
+                King Jr. captured Robinson well, praising him as a “pilgrim” for the civil rights movement and saying of
+                his lonely, courageous, dignified journey: “He was a sit-inner before the sit-ins, a freedom rider
+                before the freedom rides.”
+            </p>
+            
+        </div>
+    </body>
 </html>
