--- a/final-project/index.html
+++ b/final-project/index.html
@@ -1,9 +1,20 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <title>Luke Tabacco Final Project</title>
+
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+            crossorigin="anonymous" />
 
         <link href="style.css" rel="stylesheet" />
     </head>
@@ -13,10 +24,12 @@
             <div class="row">
                 <div class="col cover">
                     <div class="cover-image">
-                        <img src="jackie-robinson-patch.jpg" />
+                        <img
+                            src="jackie-robinson-patch.jpg"
+                            alt="picture of someone wearing a 42 patch on their jersey" />
                         <div class="cover-text">
                             <h1>The Fight over Jackie Robinson</h1>
-                            <p>By Jerry Brewer</p>
+                            <h4>By Jerry Brewer</h4>
                         </div>
                     </div>
                 </div>
@@ -26,10 +39,10 @@
             <div class="row">
                 <div class="col">
                     <div id="opening-text">
-                        <h4>
+                        <h3>
                             The trailblazer’s story symbolizes the pain and resilience of America. Can the reality
                             outlast the myth?
-                        </h4>
+                        </h3>
                     </div>
                     <p>
                         Rachel Robinson couldn’t give her blessing at first. She told the sculptor: “I’m sorry. I’m not
@@ -55,11 +68,12 @@
                         statue had vanished overnight, severed at the ankles, leaving only two bronze cleats atop home
                         plate.
                     </p>
+                    <h2 id="first-quote">QUOTE</h2>
                     <div id="first-large-image">
-                        <img src="jackie-bench.jpg" />
+                        <img src="jackie-bench.jpg" alt="picture of shoes" />
                     </div>
                     <div id="hand-brush">
-                        <img src="Screenshot%202025-12-11%20at%209.20.46%20AM.png" width="400" />
+                        <img src="Screenshot%202025-12-11%20at%209.20.46%20AM.png" width="50" alt="brush" />
                     </div>
                     <p>
                         Jack Roosevelt Robinson didn’t believe in his own myth. Too many sports legends are perfectly
@@ -80,10 +94,18 @@
                     </p>
 
                     <div id="jackie-desk">
-                        <img src="jackie-desk.png" width="600" />
+                        <img src="jackie-desk.png" width="600" alt="jackie sitting at desk" />
                     </div>
                     <div id="statistical-infographic">
-                        <h2>Need to Create Inforgraphic to go here</h2>
+                        <div class="flourish-embed flourish-timeline" data-src="visualisation/26800271">
+                            <script src="https://public.flourish.studio/resources/embed.js"></script>
+                            <noscript
+                                ><img
+                                    src="https://public.flourish.studio/visualisation/26800271/thumbnail"
+                                    width="100%"
+                                    alt="timeline visualization"
+                            /></noscript>
+                        </div>
                     </div>
                     <p>
                         Today, we sanitize the moment and reference it mostly as compelling evidence of diminishing
@@ -120,6 +142,165 @@
                         movement and saying of his lonely, courageous, dignified journey: “He was a sit-inner before the
                         sit-ins, a freedom rider before the freedom rides.”
                     </p>
+                    <p>
+                        Every April, Jackie Robinson Day is celebrated throughout baseball, the signature event of the
+                        first month of a new season. MLB retired his number in 1997, and on his special day, every major
+                        leaguer wears No. 42. But Robinson wouldn’t care to be another symbol of the embellished good of
+                        sport. He was a determined humanitarian, and much of the equality he fought for has yet to be
+                        realized.
+                    </p>
+                    <p>
+                        We make him into our injustice elixir. One annual dose, and everything becomes fair and
+                        righteous. It is akin to politicians who trot out King’s tamest quotes on MLK Day, taking a
+                        short break from furtively disenfranchising voters. They use the concepts of equality and unity
+                        as a generic salve rather than a mission to break systemic patterns that fortify
+                        marginalization.
+                    </p>
+                    <p>
+                        Robinson spent the final act of his life rejecting such deception. Before he died at 53 after a
+                        heart attack, he wrote his 1972 autobiography, “I Never Had It Made.” It’s more about his fight
+                        for justice than baseball. In it, he went back a quarter-century and, with fresh eyes, retold
+                        the story of playing in his first World Series. His words are unsparingly painful and prescient
+                        for the modern protesting athlete.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid content">
+            <div class="row">
+                <div class="column">
+                    <img src="jackie-GM.png" alt="jackie with dodgers gm" />
+                </div>
+                <div class="column">
+                    <img src="jackie-at-statue.png" alt="statue" />
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid content">
+            <div class="row">
+                <div class="col">
+                    <p>
+                        He wrote: “There I was the black grandson of a slave, the son of a black sharecropper, part of a
+                        historic occasion, a symbolic hero to my people. The air was sparkling. The sunlight was warm.
+                        The band struck up the national anthem. The flag billowed in the wind. It should have been a
+                        glorious moment for me as the stirring words of the national anthem poured from the stands.
+                        Perhaps it was, but then again perhaps the anthem could be called the theme song for a drama
+                        called The Noble Experiment. Today as I look back on that opening game of my first world series,
+                        I must tell you that it was Mr. Rickey’s drama and that I was only a principal actor. As I write
+                        this twenty years later, I cannot stand and sing the anthem. I cannot salute the flag; I know
+                        that I am a black man in a white world. In 1972, in 1947, at my birth in 1919, I know that I
+                        never had it made.”
+                    </p>
+                    <p>
+                        David was just 4 years old when his father retired from baseball. He has learned plenty about
+                        his career, as well as his four-sport college exploits at UCLA. But he remembers the activist,
+                        the man who never declared victory after integrating baseball. He remembers family dinners with
+                        prominent Black leaders and heartbreaking conversations after incidents of racial violence. He
+                        remembers domestic marches and international travel. Jackie and Rachel Robinson gave their
+                        children a global view, and all those experiences intersected at one theme: participation. Don’t
+                        disengage and watch from the bleachers. Live to serve.
+                    </p>
+                    <p>
+                        “Involvement was mandatory,” David said during a recent phone call from his home in Tanzania.
+                        “It has been a wonderful lifetime of commitment.”
+                    </p>
+                    <p>
+                        In East Africa, David and his family are coffee farmers. He chose the profession as part of an
+                        effort to help integrate African resources into the American and global economy. In 1989, he
+                        started clearing a forest area in the Southern Highlands of Tanzania to establish a base and
+                        join a cooperative of third-generation Tanzanian coffee farmers.
+                    </p>
+                    <p>Once the path was clear, the farm needed a name. They decided to call it Sweet Unity.</p>
+                </div>
+                <div class="flourish-embed flourish-chart" data-src="visualisation/26811237">
+                    <script src="https://public.flourish.studio/resources/embed.js"></script>
+                    <noscript
+                        ><img
+                            src="https://public.flourish.studio/visualisation/26811237/thumbnail"
+                            width="100%"
+                            alt="chart visualization"
+                    /></noscript>
+                </div>
+                <div class="flourish-embed flourish-chart" data-src="visualisation/26811448">
+                    <script src="https://public.flourish.studio/resources/embed.js"></script>
+                    <noscript
+                        ><img
+                            src="https://public.flourish.studio/visualisation/26811448/thumbnail"
+                            width="100%"
+                            alt="chart visualization"
+                    /></noscript>
+                </div>
+                <div class="flourish-embed flourish-chart" data-src="visualisation/26811549">
+                    <script src="https://public.flourish.studio/resources/embed.js"></script>
+                    <noscript
+                        ><img
+                            src="https://public.flourish.studio/visualisation/26811549/thumbnail"
+                            width="100%"
+                            alt="chart visualization"
+                    /></noscript>
+                </div>
+                <div class="flourish-embed flourish-chart" data-src="visualisation/26813348">
+                    <script src="https://public.flourish.studio/resources/embed.js"></script>
+                    <noscript
+                        ><img
+                            src="https://public.flourish.studio/visualisation/26813348/thumbnail"
+                            width="100%"
+                            alt="chart visualization"
+                    /></noscript>
+                </div>
+                <div class="flourish-embed flourish-chart" data-src="visualisation/26813379">
+                    <script src="https://public.flourish.studio/resources/embed.js"></script>
+                    <noscript
+                        ><img
+                            src="https://public.flourish.studio/visualisation/26813379/thumbnail"
+                            width="100%"
+                            alt="chart visualization"
+                    /></noscript>
+                </div>
+                <div class="flourish-embed flourish-chart" data-src="visualisation/26813402">
+                    <script src="https://public.flourish.studio/resources/embed.js"></script>
+                    <noscript
+                        ><img
+                            src="https://public.flourish.studio/visualisation/26813402/thumbnail"
+                            width="100%"
+                            alt="chart visualization"
+                    /></noscript>
+                </div>
+                <div class="flourish-embed flourish-chart" data-src="visualisation/26813431">
+                    <script src="https://public.flourish.studio/resources/embed.js"></script>
+                    <noscript
+                        ><img
+                            src="https://public.flourish.studio/visualisation/26813431/thumbnail"
+                            width="100%"
+                            alt="chart visualization"
+                    /></noscript>
+                </div>
+                <div class="flourish-embed flourish-chart" data-src="visualisation/26813466">
+                    <script src="https://public.flourish.studio/resources/embed.js"></script>
+                    <noscript
+                        ><img
+                            src="https://public.flourish.studio/visualisation/26813466/thumbnail"
+                            width="100%"
+                            alt="chart visualization"
+                    /></noscript>
+                </div>
+                <div class="flourish-embed flourish-chart" data-src="visualisation/26813499">
+                    <script src="https://public.flourish.studio/resources/embed.js"></script>
+                    <noscript
+                        ><img
+                            src="https://public.flourish.studio/visualisation/26813499/thumbnail"
+                            width="100%"
+                            alt="chart visualization"
+                    /></noscript>
+                </div>
+                <div class="flourish-embed flourish-chart" data-src="visualisation/26813520">
+                    <script src="https://public.flourish.studio/resources/embed.js"></script>
+                    <noscript
+                        ><img
+                            src="https://public.flourish.studio/visualisation/26813520/thumbnail"
+                            width="100%"
+                            alt="chart visualization"
+                    /></noscript>
                 </div>
             </div>
         </div>
